fixed: scrollbar in mobile menu

--- a/css/style.css
+++ b/css/style.css
@@ -1662,6 +1662,7 @@ template {
     right: 0;
     bottom: 0;
     padding-top: 30px;
+    overflow: scroll;
   }
   .navbar__bottom--vivible {
     display: block;
@@ -1945,6 +1946,9 @@ template {
   }
   .card {
     width: 100%;
+  }
+  .search__input {
+    max-width: 280px;
   }
 }
 /*# sourceMappingURL=style.css.map */
